--- a/guess.html
+++ b/guess.html
@@ -9,7 +9,7 @@
       href="https://cdn.rawgit.com/kimeiga/bahunya/css/bahunya-0.1.3.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Frutas 🥭</title>
+    <title>Frutas 🍉</title>
   </head>
   <body>
     <header>
@@ -19,18 +19,18 @@
         <a href="index.html">FRUTAS</a>
         <a href="guess.html">JUEGO</a>
       </nav>
-      <h1>Las Frutas del Abuelito</h1>
+      <h1>Que fruta es esta?</h1>
       <p>Nombres en español, ingles y cientificos de muchas frutas de Colombia</p>
     </header>
     <main
-      class="root"
-      style="flex-wrap: wrap; display: flex; justify-content: center"
+      class="game"
+      style="display: flex; flex-direction: column; align-items: center"
     ></main>
     <footer>
       <p>Creado por Pepito 🤖 y Pepita 🌸</p>
       <p>Inspirado por la lista de las frutas</p>
     </footer>
     <script src="./data.js"></script>
-    <script src="./script.js"></script>
+    <script src="./game.js"></script>
   </body>
 </html>
